force-app/main/default/objects/SVF_Format_Setting__mdt/SVF_Format_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Print Out Format for SVF cloud</description>
    <label>SVF Format Setting</label>
</CustomObject>