force-app/main/default/objects/SVF_Format_Setting__mdt/fields/CategoryCode__c.field-meta.xml
<CustomField>
    <fullName>CategoryCode__c</fullName>
    <label>種類コード</label>
    <length>2</length>
    <type>Text</type>
</CustomField>