force-app/main/default/objects/SVF_Format_Setting__mdt/fields/CategoryName__c.field-meta.xml
<CustomField>
    <fullName>CategoryName__c</fullName>
    <label>種類名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>