force-app/main/default/objects/SVF_Format_Setting__mdt/fields/ForFacility__c.field-meta.xml
<CustomField>
    <fullName>ForFacility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>施設</label>
    <type>Checkbox</type>
</CustomField>