force-app/main/default/objects/SVF_Format_Setting__mdt/fields/ForPublicDemand__c.field-meta.xml
<CustomField>
    <fullName>ForPublicDemand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>官需</label>
    <type>Checkbox</type>
</CustomField>