force-app/main/default/objects/SVF_Format_Setting__mdt/fields/ForWaterEnvironment__c.field-meta.xml
<CustomField>
    <fullName>ForWaterEnvironment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>水環境</label>
    <type>Checkbox</type>
</CustomField>