force-app/main/default/objects/SVF_Format_Setting__mdt/fields/KyoTai_Used__c.field-meta.xml
<CustomField>
    <fullName>KyoTai_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>使用（筐体、仕様）</label>
    <type>Checkbox</type>
</CustomField>