force-app/main/default/objects/SVF_Format_Setting__mdt/fields/MajorClassificationCode__c.field-meta.xml
<CustomField>
    <fullName>MajorClassificationCode__c</fullName>
    <label>大分類コード</label>
    <length>2</length>
    <type>Text</type>
</CustomField>