force-app/main/default/objects/SVF_Format_Setting__mdt/fields/MeiSai_Used__c.field-meta.xml
<CustomField>
    <fullName>MeiSai_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>使用（明細、手入力）</label>
    <type>Checkbox</type>
</CustomField>