force-app/main/default/objects/SVF_Format_Setting__mdt/fields/MinorClassificationName__c.field-meta.xml
<CustomField>
    <fullName>MinorClassificationName__c</fullName>
    <label>小分類名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>