force-app/main/default/objects/SVF_Format_Setting__mdt/fields/PrintOutFormat_KyoTai__c.field-meta.xml
<CustomField>
    <fullName>PrintOutFormat_KyoTai__c</fullName>
    <inlineHelpText>Example:

               Col.1      Col.2      Col.3
Row 1  [{名称1}],[{名称2}],[{名称3}]
Row 2  [{名称4}],[{名称5}],[{名称6}]
Row 3  [{名称7}],[{名称8}],[{名称9}]</inlineHelpText>
    <label>プリントアウトフォーマット(筐体)</label>
    <type>TextArea</type>
</CustomField>