force-app/main/default/objects/SVF_Format_Setting__mdt/listViews/All_format.listView-meta.xml
<ListView>
    <fullName>All_format</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>MajorClassificationCode__c</columns>
    <columns>MinorClassificationCode__c</columns>
    <columns>CategoryCode__c</columns>
    <columns>KyoTai_Used__c</columns>
    <columns>PrintOutFormat_KyoTai__c</columns>
    <columns>MeiSai_Used__c</columns>
    <columns>PrintOutFormat_MeiSai__c</columns>
    <filterScope>Everything</filterScope>
    <label>All format</label>
    <language>en_US</language>
</ListView>