force-app/main/default/objects/SVF_Format_Setting__mdt/listViews/All_type.listView-meta.xml
<ListView>
    <fullName>All_type</fullName>
    <columns>MasterLabel</columns>
    <columns>ForWaterEnvironment__c</columns>
    <columns>ForFacility__c</columns>
    <columns>ForPublicDemand__c</columns>
    <columns>MajorClassificationCode__c</columns>
    <columns>MajorClassificationName__c</columns>
    <columns>MinorClassificationCode__c</columns>
    <columns>MinorClassificationName__c</columns>
    <columns>CategoryCode__c</columns>
    <columns>CategoryName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All type</label>
    <language>en_US</language>
</ListView>