force-app/main/default/objects/SVF_Format_Setting__mdt/listViews/WaterType.listView-meta.xml
<ListView>
    <fullName>WaterType</fullName>
    <columns>MasterLabel</columns>
    <columns>MajorClassificationCode__c</columns>
    <columns>MajorClassificationName__c</columns>
    <columns>MinorClassificationCode__c</columns>
    <columns>MinorClassificationName__c</columns>
    <columns>CategoryCode__c</columns>
    <columns>CategoryName__c</columns>
    <columns>KyoTai_Used__c</columns>
    <columns>PrintOutFormat_KyoTai__c</columns>
    <columns>MeiSai_Used__c</columns>
    <columns>PrintOutFormat_MeiSai__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ForWaterEnvironment__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>水環境</label>
    <language>en_US</language>
</ListView>